# prosemirror-py

./: .flake8  .gitignore  .travis.yml  LICENSE.md  Pipfile  README.md  azure-pipelines.yml  conftest.py  example.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
prosemirror/: __init__.py  utils.py
prosemirror/model/: __init__.py  comparedeep.py  content.py  diff.py  fragment.py  from_dom.py  mark.py  node.py  replace.py  resolvedpos.py  schema.py  to_dom.py
prosemirror/schema/basic/: __init__.py  schema_basic.py
prosemirror/schema/list/: schema_list.py
prosemirror/test_builder/: __init__.py  build.py
prosemirror/transform/: __init__.py  attr_step.py  doc_attr_step.py  map.py  mark.py  mark_step.py  replace.py  replace_step.py  step.py  structure.py  transform.py
prosemirror_model/: __init__.py  content.py  diff.py  fragment.py  mark.py  node.py  replace.py  resolvedpos.py  schema.py
prosemirror_model/tests/: test_content.py  test_diff.py  test_mark.py  test_resolve.py  test_slice.py
prosemirror_py/: __init__.py  utils.py
prosemirror_py/prosemirror_model/: comparedeep.py  content.py  diff.py  fragment.py  node.py  replace.py
prosemirror_py/prosemirror_schema_basic/: schema_basic.py
prosemirror_py/prosemirror_schema_list/: schema_list.py
prosemirror_py/prosemirror_test_builder/: __init__.py  build.py
prosemirror_py/prosemirror_transform/: mark_step.py  replace.py  replace_step.py  step.py  structure.py  transform.py
prosemirror_schema_basic/: __init__.py  schema_basic.py
prosemirror_schema_list/: __init__.py  schema_list.py
prosemirror_test_builder/: __init__.py  build.py
prosemirror_transform/: __init__.py  map.py  mark_step.py  replace.py  replace_step.py  step.py  structure.py  transform.py
prosemirror_transform/tests/: conftest.py  test_step.py  test_structure.py  test_trans.py
tests/: conftest.py
tests/prosemirror_model/tests/: test_content.py  test_diff.py  test_dom.py  test_mark.py  test_node.py  test_resolve.py  test_slice.py
tests/prosemirror_transform/tests/: conftest.py  test_mapping.py  test_step.py  test_structure.py  test_trans.py
