[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prosemirror"
version = "0.4.0"
description = "Python implementation of core ProseMirror modules for collaborative editing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Cormier-Iijima", email = "sam@fellow.co" },
    { name = "Shen Li", email = "dustet@gmail.com" },
]
license = { text = "BSD-3-Clause" }
keywords = ["prosemirror", "collaborative", "editing"]
dependencies = ["typing-extensions>=4.1", "lxml>=4.9", "cssselect>=1.2"]

[project.optional-dependencies]
dev = [
    "codecov~=2.1",
    "coverage~=7.0",
    "lxml-stubs~=0.5",
    "mypy~=1.9",
    "pytest~=8.1",
    "pytest-cov~=5.0",
    "ruff~=0.4",
]

[tool.ruff.lint]
select = [
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
preview = true

[tool.ruff.format]
preview = true

[tool.mypy]
strict = true
