[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prosemirror"
dynamic = ["version"]
description = "Python implementation of core ProseMirror modules for collaborative editing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Cormier-Iijima", email = "sam@fellow.co" },
    { name = "Shen Li", email = "dustet@gmail.com" },
]
license = { text = "BSD-3-Clause" }
keywords = ["prosemirror", "collaborative", "editing"]
dependencies = ["typing-extensions>=4.1", "lxml>=4.9", "cssselect>=1.2"]

[project.optional-dependencies]
dev = [
    "codecov~=2.1",
    "coverage~=7.6",
    "lxml-stubs~=0.5",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff~=0.7",
]

[tool.setuptools_scm]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["COM812"]
preview = true

[tool.ruff.lint.per-file-ignores]
"prosemirror/test_builder/**" = ["ANN"]
"tests/**" = ["ANN"]

[tool.ruff.format]
preview = true

[tool.mypy]
strict = true
