[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "prosemirror"
dynamic = ["version"]
description = "Python implementation of core ProseMirror modules for collaborative editing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Cormier-Iijima", email = "sam@fellow.co" },
    { name = "Shen Li", email = "dustet@gmail.com" },
]
license = { text = "BSD-3-Clause" }
keywords = ["prosemirror", "collaborative", "editing"]
dependencies = ["typing-extensions>=4.1", "lxml>=4.9", "cssselect>=1.2"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/fellowapp/prosemirror-py"
Repository = "https://github.com/fellowapp/prosemirror-py"
Changelog = "https://github.com/fellowapp/prosemirror-py/releases"

[dependency-groups]
dev = [
    "codecov~=2.1",
    "coverage~=7.6",
    "mypy~=1.15",
    "pyright>=1.1.396",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff~=0.9",
    "types-lxml>=2025.2.24",
]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["COM812"]
preview = true

[tool.ruff.lint.per-file-ignores]
"prosemirror/test_builder/**" = ["ANN"]
"tests/**" = ["ANN"]

[tool.ruff.format]
preview = true
